changing email id

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           /></a>
         </li>
         <li>
-          <a href="mailto:madhuri.maniktahla@gmail.com?" target="blank">
+          <a href="mailto:madhuri.maniktahla@gmail.com" target="blank">
             <img src="./images/icons8-mail-48.png"
           /></a>
         </li>
