--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <h3>Weather Dashboard</h3>
                 <p>
                   A simple weather dashboard to display current weather of
-                  different cities<br /><br />
-                  HTML, CSS, JavaScript, Open Weather API
+                  different cities<br /><br />HTML, CSS, JavaScript, Open
+                  Weather API
                 </p>
                 <img src="./images/weather.jpg" alt="Weather App" />
                 <h6>
