changing the images

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   different cities<br /><br />HTML, CSS, JavaScript, Open
                   Weather API
                 </p>
-                <img src="./images/weather.jpg" alt="Weather App" />
+                <img src="./images/weather.png" alt="Weather App" />
                 <h6>
                   <a
                     href="https://weather-project-xi.vercel.app/"
