changing pic names

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   An application for users to meditate and relax.<br /><br />
                   HTML, CSS, JavaScript
                 </p>
-                <img src="./images/meditation.jpg" alt="Meditation App" />
+                <img src="./images/breathing_app.jpg" alt="Meditation App" />
                 <h6>
                   <a
                     href="https://hosting-breathing-85pkm25vq-madhurimt.vercel.app/"
@@ -136,7 +136,7 @@
                   <br /><br />
                   HTML, CSS, JavaScript
                 </p>
-                <img src="./images/calculator.jpg" alt="Calculator" />
+                <img src="./images/calc.jpg" alt="Calculator" />
                 <h6>
                   <a
                     href="https://tranquil-lamington-ffe5f7.netlify.app/"
@@ -158,7 +158,7 @@
                   <br /><br />
                   HTML, CSS, JavaScript
                 </p>
-                <img src="./images/github.jpg" alt="Weather" />
+                <img src="./images/git.jpg" alt="Weather" />
                 <h6>
                   <a
                     href="https://vocal-custard-4058ae.netlify.app/"
