--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
                   different cities<br /><br />HTML, CSS, JavaScript, Open
                   Weather API
                 </p>
-                <img src="./images/weather.png" alt="Weather App" />
+                <a href="https://weather-project-xi.vercel.app/" target="blank">
+                  <img src="./images/weather.png" alt="Weather App" />
+                </a>
+
                 <h6>
                   <a
                     href="https://weather-project-xi.vercel.app/"
@@ -114,7 +117,13 @@
                   An application for users to meditate and relax.<br /><br />
                   HTML, CSS, JavaScript
                 </p>
-                <img src="./images/breathing_app.jpg" alt="Meditation App" />
+                <a
+                  href="https://hosting-breathing-85pkm25vq-madhurimt.vercel.app/"
+                  target="blank"
+                >
+                  <img src="./images/breathing_app.jpg" alt="Meditation App" />
+                </a>
+
                 <h6>
                   <a
                     href="https://hosting-breathing-85pkm25vq-madhurimt.vercel.app/"
@@ -136,7 +145,13 @@
                   <br /><br />
                   HTML, CSS, JavaScript
                 </p>
-                <img src="./images/calc.jpg" alt="Calculator" />
+                <a
+                  href="https://tranquil-lamington-ffe5f7.netlify.app/"
+                  target="blank"
+                >
+                  <img src="./images/calc.jpg" alt="Calculator"
+                /></a>
+
                 <h6>
                   <a
                     href="https://tranquil-lamington-ffe5f7.netlify.app/"
@@ -158,7 +173,13 @@
                   <br /><br />
                   HTML, CSS, JavaScript
                 </p>
-                <img src="./images/git.jpg" alt="Weather" />
+                <a
+                  href="https://vocal-custard-4058ae.netlify.app/"
+                  target="blank"
+                >
+                  <img src="./images/git.jpg" alt="Weather"
+                /></a>
+
                 <h6>
                   <a
                     href="https://vocal-custard-4058ae.netlify.app/"
@@ -180,7 +201,7 @@
 
       <section id="contact" class="pagestyle">
         <h2>Contact</h2>
-        <form action="https://formspree.io/f/xleaagkl" method="POST">
+        <form action="https://formspree.io/f/xknabkdj" method="POST">
           <label>
             Name
             <input /> </label
